--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="profile-header">
-      <img src="c:\Users\sinhvien\Pictures\Screenshots\avatar.jpg" alt="Ảnh đại diện" />
+      <img src="C:\Users\ASUS\Documents\Zalo Received Files\New folder.zip\New folder\images" alt="Ảnh đại diện" />
       <div class="profile-info">
         <h1>Nguyễn Văn A</h1>
         <p><strong>Email:</strong> nguyenhaiquan936@email.com</p>
