--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
     <div class="tab-content" id="contact">
       <ul>
-        <li>📧 Email: trungtin@example.com</li>
-        <li>💼 GitHub: <a href="https://github.com/ttin14" target="_blank">ttin14</a></li>
+        <li>📧 Email:lenguyentrungtin14022005@gmail.com</li>
+        <li>💼 GitHub: <a href="https://github.com/TrungTin-05" target="_blank">ttin14</a></li>
         <li>🔗 LinkedIn: <a href="#">linkedin.com/in/trungtin</a></li>
       </ul>
     </div>
